--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "lucide-react": "^0.451.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
