--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.3.0",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
